# FastAPIProject

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dbfixtures.sql  docker-compose.yml  instrucoes_posts.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
app/books/: __init__.py  models.py  repository.py  router.py  schemas.py
benchmark/: README.md  RESULTS.md  build_post11_image.py  docker-compose-bench.yml  publish_to_wagtail.sh  run.sh  seed.py
benchmark/k6/: fanout.js  mixed.js  read.js
benchmark/results/: aggregate.py  bench_summary.csv  bench_summary.md  fastapi-fanout-r1.json  fastapi-fanout-r2.json  fastapi-fanout-r3.json  fastapi-mixed-r1.json  fastapi-mixed-r2.json  fastapi-mixed-r3.json  fastapi-read-r1.json  fastapi-read-r2.json  fastapi-read-r3.json  flask-fanout-r1.json  flask-fanout-r2.json  flask-fanout-r3.json  flask-mixed-r1.json  flask-mixed-r2.json  flask-mixed-r3.json  flask-read-r1.json  flask-read-r2.json  flask-read-r3.json
tests/: conftest.py  test_config.py  test_database.py  test_lifespan.py  test_logging_config.py  test_main.py  test_repository.py  test_router.py  test_schemas.py
